--- a/zakki.html
+++ b/zakki.html
@@ -13,7 +13,7 @@
 国土地理院の航空写真だと70年代と現在しか存在しない。GoogleEarthだと85年の衛星写真があるが、荒すぎて何も分からない。（その次は04年、まだドライブイン跡が残っていたり少々の参考にはなる…？）現存している個人サイトも粗方探したがそれっぽい写真は無かった。<br>
 こういう時は県立図書館かな…。と駆け込んで、90年代前半の航空写真（ふるさと空の旅）を見てみたが、砥部のページに前半区間がチラッと写っていただけだった。<s>せっかくセスナか何かを飛ばしたんだったら撮ってきてよー(^^;</s><br>
 残るは…フィールドワークかなぁ…。嫌だなー、でも探求心は抑えられない…(^^;<br><br>
-P.S. このサイトの𧃴折りは、この峠の村から取った名前だったりする。せっかくなので、漢字の由来でも載ってないかな…？、と、県の風土を纏めた分厚い本と、県の地名の由来を纏めた本に当たってみたが記載無し。残念。<br>
+P.S. このサイトの𧃴折りは、この峠の地名から取った名前だったりする。せっかくなので、漢字の由来でも載ってないかな…？、と、県の風土を纏めた分厚い本と、県の地名の由来を纏めた本に当たってみたが記載無し。残念。<br>
 因みに『ツヅラオレ』という項目があって「これは！！！」と喜んだが、当時の服の話でタダのぬか喜びだった。（古くなった布を割いて、それを糸として編んだ服の事をツヅラオレというらしい。）<br><br>
 
 <h3>トプ画の話　　　　　　　　　　　　　　2023年9月26日</h3>
