--- a/zakki.html
+++ b/zakki.html
@@ -14,7 +14,7 @@
 こういう時は県立図書館かな…。と駆け込んで、90年代前半の航空写真（ふるさと空の旅）を見てみたが、砥部のページに前半区間がチラッと写っていただけだった。<s>せっかくセスナか何かを飛ばしたんだったら撮ってきてよー(^^;</s><br>
 残るは…フィールドワークかなぁ…。嫌だなー、でも探求心は抑えられない…(^^;<br><br>
 P.S. このサイトの𧃴折りは、この峠の地名から取った名前だったりする。せっかくなので、漢字の由来でも載ってないかな…？、と、県の風土を纏めた分厚い本と、県の地名の由来を纏めた本に当たってみたが記載無し。残念。<br>
-因みに『ツヅラオレ』という項目があって「これは！！！」と喜んだが、当時の服の話でタダのぬか喜びだった。（古くなった布を割いて、それを糸として編んだ服の事をツヅラオレというらしい。）<br><br>
+因みに『ツヅラオレ』という項目があって「もしや…？」となったが、当時の服の話でタダのぬか喜びだった。（古くなった布を割いて、それを糸として編んだ服の事をツヅラオレというらしい。）<br><br>
 
 <h3>トプ画の話　　　　　　　　　　　　　　2023年9月26日</h3>
 Mi.ioの方で呟いたが、トプ画の右側に合成してあるトンネルが通行止めになっていた…。<br>
