--- a/syouzyoe.html
+++ b/syouzyoe.html
@@ -16,7 +16,7 @@
 <a href="https://cdn.discordapp.com/attachments/889847829063933972/1037112623893852210/utinoko1.png"><img alt="うちのこ1"  src="https://cdn.discordapp.com/attachments/889847829063933972/1050906429072097280/mzt000.jpg" border="0" width="376" height="260"><br></a>2022年10月28日<br>まあまあ気に入ってる繪です。<br>実は元となったアナログ下書き繪が有って、それをトップページ用に描いたのがこの繪だったりします。<br>HTMLの技術がゴミ過ぎてスタイル的に実装出来なかったけど(^^;<br>座ってるのはMacintosh classic Ⅱのつもりです。リアルでも使い道が無くて埃被ってる(^^;<br><br><br>
 
 <div align="center">
-<a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
+<a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png"><br></a>
 </DIV>
 </body>
 </html>
