--- a/minicar.html
+++ b/minicar.html
@@ -12,7 +12,7 @@
 <br><br><br>
 </div>
 <div align="center">
-<a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png"><br></a>
+<a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png"><br></a>
 </DIV>
 </body>
 </html>
