--- a/botomika01.html
+++ b/botomika01.html
@@ -32,7 +32,7 @@
 
 </div>
 <div align="center"><br><br>
-<a href="https://mizutisann.github.io/HP/home"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1040017745602945104/modoru.png" border="0" width="128" height="32"><br></a>
+<a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png" border="0" width="128" height="32"><br></a>
 </DIV>
 </body>
 </html>
