--- a/syouzyoe.html
+++ b/syouzyoe.html
@@ -7,7 +7,7 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
 <div align="left"><img alt="繪幻想"  src="https://cdn.discordapp.com/attachments/889847829063933972/1041864863712034846/egensou.png"><br>ここでは管理人が描いた繪を貼って行きます。大体自己満足。ヘタクソだし(^^;<br><br><br>
-<a href="https://mizutisann.github.io/HP/img/syouzyoe/23%2Cyukimaigoudou%2Cmizutisann.zip"><img alt="ユキマイ合同黒歴史漫画"  src="https://mizutisann.github.io/HP/img/syouzyoe/mzt003.jpg" border="0" width="376" height="260"><br></a>2023年10月1日<br>Zipファイルに直リンしてます。90：90の法則に逆らえなかった残念な4p漫画モドキ。<br>やっぱ悪ふざけという要素が無いと上手く描けないなぁ…と痛感…(^^;<br>精進します…（ほんとかよ…）<br>
+<a href="https://mizutisann.github.io/HP/img/syouzyoe/23%2Cyukimaigoudou%2Cmizutisann.zip"><img alt="ユキマイ合同黒歴史漫画"  src="https://mizutisann.github.io/HP/img/syouzyoe/mzt003.jpg" border="0" width="376" height="260"><br></a>2023年10月1日<br>Zipファイルに直リンしてます。<br>某人のユキマイ合同に寄稿したもの。90：90の法則に逆らえなかった残念な4p漫画モドキ。<br>やっぱ悪ふざけという要素が無いと上手く描けないなぁ…と痛感…(^^;<br>精進します…（ほんとかよ…）<br>
 </div><div align="right">
 <a href="https://cdn.discordapp.com/attachments/889847829063933972/1058445121789640814/hometop01.png"><img alt="年賀新年2023"  src="https://cdn.discordapp.com/attachments/889847829063933972/1073781093498621962/mzt002.jpg" border="0" width="376" height="260"><br></a>2023年1月1日<br>あけおめという事で描いたイラスト<br>兎と富士重工のラビットを掛けたが、マイナーな型を選んだのと画力の関係で多分誰も気づいていない(^^;<br>オマケで川澄舞も描いた。兎年で舞のイラストが多少書かれるだろうと思っていたが、ｼﾌﾞで2枚ぐらいしか増えてなかった。<br>今年も誤算だらけの年になるだろう。(^^;<br>
 </div><div align="left">
