--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>𧃴折り　　　　　　　　　　　　　　　　2023年9月30日</h3>
+WindowsXPでこのペエジを覗いてみると”𧃴”（ツヅラ）が正常に表示されていなかった…。<br>
+特殊な漢字だけどMSゴシックなら大丈夫。と思っていたけど違ったようだ…(^^;<br>
+幸いWindows10からMSゴシックを取り出して、XP機にインストールし直したら表示されたので、これで良しとしておこう…。<br>
+タブの名前も”𧃴折り”にしようかな、と思っていたけど、やっぱり止めよー……(^^;<br><br><br>
+
 <h3>探求心は猫をも殺す？　　　　　　　　　2023年9月28日</h3>
 松山市から高知へ行く道として、三坂峠という峠がある。今やバイパスが出来、一部を除き旧道となり閑散としているが…。<br>
 80年代～90年代には走り屋が跋扈していたらしい。その頃の三坂峠の写真を見てみたいが、ネット上にも県立の図書館にもそれらしい資料が無くてかな～り困っている。<br>
@@ -14,7 +20,7 @@
 こういう時は県立図書館かな…。と駆け込んで、90年代前半の航空写真（ふるさと空の旅）を見てみたが、砥部のページに前半区間がチラッと写っていただけだった。<s>せっかくセスナか何かを飛ばしたんだったら撮ってきてよー(^^;</s><br>
 残るは…フィールドワークかなぁ…。嫌だなー、でも探求心は抑えられない…(^^;<br><br>
 P.S. このサイトの𧃴折りは、この峠の地名から取った名前だったりする。せっかくなので、漢字の由来でも載ってないかな…？、と、県の風土を纏めた分厚い本と、県の地名の由来を纏めた本に当たってみたが記載無し。残念。<br>
-因みに『ツヅラオレ』という項目があって「もしや…？」となったが、当時の服の話でタダのぬか喜びだった。（古くなった布を割いて、それを糸として編んだ服の事をツヅラオレというらしい。）<br><br>
+因みに『ツヅラオレ』という項目があって「もしや…？」となったが、当時の服の話でタダのぬか喜びだった。（古くなった布を割いて、それを糸として編んだ服の事をツヅラオレというらしい。）<br><br><br>
 
 <h3>トプ画の話　　　　　　　　　　　　　　2023年9月26日</h3>
 Mi.ioの方で呟いたが、トプ画の右側に合成してあるトンネルが通行止めになっていた…。<br>
