--- a/kuruma/minicar/minicar.html
+++ b/kuruma/minicar/minicar.html
@@ -7,7 +7,7 @@
 
 <div align="center">
 <h2>車関係の間 小さいヤツ</h2>
-<br><br><a href="https://mizutisann.github.io/HP/botomika01">50円で買ったZ32のモータートミカを直す。パート1</a>
+<br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/z32tomika1/z32tomica1.html">50円で買ったZ32のモータートミカを直す。パート1</a>
 <br><br><br>
 
 </div>
