--- a/kuruma/minicar/z32tomika1/z32tomica1.html
+++ b/kuruma/minicar/z32tomika1/z32tomica1.html
@@ -7,28 +7,28 @@
 
 <div align="center">
 <h2>50円で買ったZ32のモータートミカを直す。パート1</h2>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898657403064320/00.png" border="0" width="512" height="380"><br><br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898657738588320/01.png" border="0" width="512" height="380"><br>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1/00.png" border="0" width="512" height="380"><br><br>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1/01.png" border="0" width="512" height="380"><br>
 先日、とある旧車のイベントに行ったときに、<br>
 フリマでこのZ32のモータートミカが売ってたので、つい買ってしまった…。<br>
 ここまでやられてるは中々無いだろうな…と思いつつ、買ったからには直していきます。<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898658019623002/02.png" border="0" width="512" height="380"><br>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1/02.png" border="0" width="512" height="380"><br>
 早速、分解すると、この有様。<br>
 モータからスイッチの機構まで全部、電解液が回って死んでます。<br>
 一遍の望みを掛けモータを分解してみると、中から緑錆が…。ご愁傷様です。<br>
 とりあえずメッキ類はお酢に漬けて錆を落としました。<br>
 錆を落としてる間に、家のジャンク箱からよさげなモータを探します…<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898658640363530/04.png" border="0" width="512" height="380"><br>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1/03.png" border="0" width="512" height="380"><br>
 ありました。PS1のディスクドライブのモータを拝借する事にします。<br>
 （因みに昔、ジャンクで買った最初期のPS1の生贄にしたPS1です。歯車を固定するパーツが死んでます。）<br>
 <br>取り付ける際、シャフトが長いのでニッパで切っちゃいます。<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898659261141004/06.png" border="0" width="512" height="380"><br>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1/04.png" border="0" width="512" height="380"><br>
 収まりました。<br>
 スイッチの機構にはプラスチックを溶着したものがありますが、<br>
 溶着ではみ出た部分のみを切って取り外し、取り付ける時は半田ごてを上手く当てると元通りになると思います。<br>
 それでもダメならな、黒のプラ棒（ランナーとか？）を使い、溶接のような感じで修復すれば割と元通りになります。<br><br>
 ボディの方はワイヤーブラシで塗装を落として、テキトーに下処理して塗っておきました。<br>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1043898656803258398/07.png" border="0" width="512" height="380"><br>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1/05.png" border="0" width="512" height="380"><br>
 錆はテキトーにレジンを持って削って…と、まあ、うん。雑だよね(^^;<br><br>
 外すときに窓のパーツが割れちゃったから、なんかで直さないと…orz
 <br>作るか分からないパート2に期待（？）
