--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,12 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>改修中… 　　　　　　　　　　　　　　　2023年10月4日</h3>
+何も考えずに作ったダンジョンのようにグシャグシャな我がホームペエジの改修作業に乗り気になったのでやってます。<br>
+とりあえず今日は車関係の間と、少女繪の改修を…。ああ、めんどくさーい！前にこのペエジ作った奴出てこーい！！(^^;<br>
+そういや、改修ということで数日前にコッソリ、トプ画をカナ・アナベラルのヤツにしました。<br>
+こんなペエジに来る人は少ないだろうから誰も気づいてないだろうけど。(^^;<br><br><br>
+
 <h3>𧃴折り　　　　　　　　　　　　　　　　2023年9月30日</h3>
 WindowsXPでこのペエジを覗いてみると”𧃴”（ツヅラ）が正常に表示されていなかった…。<br>
 特殊な漢字だけどMSゴシックなら大丈夫。と思っていたけど違ったようだ…(^^;<br>
