--- a/link.html
+++ b/link.html
@@ -1,28 +1,50 @@
 <html>
 <head>
-  <meta content="link" >
   <title>みずちーさんのHP 異的幻想郷</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
+<body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 
-<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
-<div align="left">
-東方projectでお馴染み（？）の<br>
+東方projectでお馴染みの<br>
   上海アリス幻樂団<br>
 <a href="https://www16.big.or.jp/~zun/"><img src="http://www16.big.or.jp/~zun/image/banner.gif" width=200 height=40><br>
 </a><br><br>
+
+AMの頃の東方はここから<br>
+  Amusement Makers(旧)公式サイト<br>
+<a href="http://www.kt.rim.or.jp/~aotaka/am/"><img src="https://mizutisann.github.io/HP/img/link/ambanner.gif" width=200 height=40><br>
+</a><br><br>
+
 KanonやAIRで…って説明要らないよね(^^;<br>
   KEY OFFICIAL HOMEPAGE<br>
-<a href="http://key.visualarts.gr.jp/"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1044680797833150544/key_bn07.gif" width=200 height=40><br>
+<a href="http://key.visualarts.gr.jp/"><img src="https://mizutisann.github.io/HP/img/link/key_bn07.gif" width=200 height=40><br>
 </a><br><br>
-何かデジャヴを感じさせるホオムペエジ。桃木の下の穴にある楽園へ繋がると思います<br>
+
+何かデジャヴを感じさせるホオムペエジ。桃木の下の穴にある楽園へ繋がってそう<br>
   正直村の面忘<br>
-<a href="http://houraidoll1.s203.xrea.com/" target="_blank"><img src="https://cdn.discordapp.com/attachments/889847829063933972/1081712870850568293/banner.gif" width=200 height=40><br>
+<a href="http://houraidoll1.s203.xrea.com/" target="_blank"><img src="https://mizutisann.github.io/HP/img/link/syouziki-banner.gif" width=200 height=40><br>
 </a><br><br>
-どういうわけか仲良くさせて貰ってる古の東方とかに詳しい人<br>
+
+どういうわけか仲良くさせて貰ってる古の東方とかに詳しい人。毎度お世話になっています(^^;<br>
   閉鎖路地<br>
 <a href="https://shibaa.web.fc2.com/"><img src="https://raw.githubusercontent.com/mizutisann/HP/main/banner-heisa.png" width=200 height=40><br>
 </a><br><br>
+
+その昔にお世話になった、00年代前半までの東方の考察をしているサイト<br>
+　甦れ1996<br>
+<a href="http://cynthia.cc/1996/"><img src="https://mizutisann.github.io/HP/img/link/1996_bnr.gif" width=200 height=40><br>
+</a><br><br>
+
+その昔にかなりお世話になったサイト、その昔の東方について纏め上げててくれている<br>
+　しゃーぷにくびーふ<br>
+<a href="https://shiosyakeyakini.info/?index"><img src="https://mizutisann.github.io/HP/img/link/banner-niku.png" width=200 height=40><br>
+</a><br><br>
+
+その昔にお世話になった、その昔の東方についてアレコレ色々と考察しているサイト<br>
+　こしのみちのくに<br>
+<a href="https://nrr08.com/"><img src="https://mizutisann.github.io/HP/img/link/echizen_banner.png" width=200 height=40><br>
+</a><br><br>
+
 </div>
 <div align="center">
 <a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png"><br></a>
