--- a/zakki.html
+++ b/zakki.html
@@ -9,7 +9,7 @@
 <br>
 <h3>改修中… 　　　　　　　　　　　　　　　2023年10月4日</h3>
 何も考えずに作ったダンジョンのようにグシャグシャな我がホームペエジの改修作業に乗り気になったのでやってます。<br>
-とりあえず今日は車関係の間と、少女繪の改修を…。ああ、めんどくさーい！前にこのペエジ作った奴出てこーい！！(^^;<br>
+とりあえず今日は車関係の間と、少女繪の改修と、リンク集の改修を…。ああ、めんどくさーい！前にこのペエジ作った奴出てこーい！！(^^;<br>
 そういや、改修ということで数日前にコッソリ、トプ画をカナ・アナベラルのヤツにしました。<br>
 こんなペエジに来る人は少ないだろうから誰も気づいてないだろうけど。(^^;<br><br><br>
 
