--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,13 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>JPG　　 　　　　　　　　　　　　　　　2023年10月12日</h3>
+急に9X年～05年辺りまで使用されていたチョロQ公式のHPを掘り起こしたくなったので掘り起こした。<br>
+脳が理解しやすい壁紙のページには数枚、魚拓の取られた壁紙用の画像ファイルがあったので落としてみたらJPGだった。<br>
+「JPGかー、圧縮されている画像を壁紙には…なぁ…」と思った。<br>
+まあ、よく考えてみれば壁紙用の画像をJPGにしてまで容量の削減に努めていたのである。<br>
+1MBを考えHTMLを書き込んでいた時代。画像も動画も自由に設置できる時代。両方とも哀れなのかもね(^^;<br><br><br>
+
 <h3>改修中… 　　　　　　　　　　　　　　　2023年10月4日</h3>
 何も考えずに作ったダンジョンのようにグシャグシャな我がホームペエジの改修作業に乗り気になったのでやってます。<br>
 とりあえず今日は車関係の間と、少女繪の改修と、リンク集の改修を…。ああ、めんどくさーい！前にこのペエジ作った奴出てこーい！！(^^;<br>
