--- a/home.html
+++ b/home.html
@@ -12,12 +12,19 @@
 <!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり-->
 <FONT SIZE=-3>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</FONT><br><br>
 <a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/kanrinin.png" border="0" width="128" height="32">管理人っぽい人の紹介です。<br></a>
+最終更新日：令和5年10月1日<br>
 <a href="https://mizutisann.github.io/HP/zakki"><img alt="雑記など"  src="https://mizutisann.github.io/HP/img/home/zakki.png" border="0" width="128" height="32">書き散らしてます。多分。<br></a>
+最終更新日：令和5年10月17日<br>
 <a href="https://mizutisann.github.io/HP/kari"><img alt="ゲエムの間"  src="https://mizutisann.github.io/HP/img/home/game.png" border="0" width="128" height="32">ゲエムについて語ったりとか。<br></a>
+最終更新日：令和Y年MM月DD日<br>
 <a href="https://mizutisann.github.io/HP/PC.html"><img alt="PCの間"  src="https://mizutisann.github.io/HP/img/home/PC.png" border="0" width="128" height="32">主にオウルドなPCの事を。<br></a>
+最終更新日：令和5年8月9日<br>
 <a href="https://mizutisann.github.io/HP/kuruma.html"><img alt="車関係の間"  src="https://mizutisann.github.io/HP/img/home/kuruma.png" border="0" width="128" height="32">これもオウルドな車の話を。<br></a>
+最終更新日：令和5年8月9日<br>
 <a href="https://mizutisann.github.io/HP/kari"><img alt="少女會"  src="https://mizutisann.github.io/HP/img/home/egensou.png" border="0" width="128" height="32">描いた繪とかを貼ってます。<br></a>
+最終更新日：令和5年10月5日<br>
 <a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/iteki.png" border="0" width="128" height="32">リンク置き場です。偶に異的。<br></a>
+最終更新日：令和5年10月5日<br>
 
 <br><hr>
 <br>
