--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,10 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>パクった　　　　　　　　　　　　　　　2023年10月17日</h3>
+更新用のページ作ろうかな…とか思っていたが、重い腰が上らなかったので、柴さんのHPの『最終更新日』の配置をパクった(^^;<br>
+こりゃ、快適、快適。まだ本格的には利用してないから、たぶんだけど(^^;<br>
+<br><br><br>
 <h3>JPG　　 　　　　　　　　　　　　　　　2023年10月12日</h3>
 急に9X年～05年辺りまで使用されていたチョロQ公式のHPを掘り起こしたくなったので掘り起こした。<br>
 脳が理解しやすい壁紙のページには数枚、魚拓の取られた壁紙用の画像ファイルがあったので落としてみたらJPGだった。<br>
