--- a/zakki.html
+++ b/zakki.html
@@ -7,9 +7,32 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>この話はおおよそフィクションです　　　2023年10月17日</h3>
+午前三時、寝る子は寝る、泣く子は泣く丑の刻。生活リズムが一周回ってきた私は、外出計画を頭の中で練っていた。<br>
+数十分は過ぎた。重い腰を上げ、抜き足差し足でヘルメットとグローブを手に入れる。鍵は持った。免許証、財布、スマホも持った。……一眼レフも持っていくつもりだったが充電器が探せなかった。<br>
+ひっそりと必要最小限の分だけ門扉を開く。愛車のカブを引っ張り出す。キーを回すと緑に光り、Nの文字が浮かび上がる。<br>
+……夜は音が響く。エンジンに火を入れたい気持ちを抑え少し離れた場所でセルを回す。寒くなってきたがチョークを引かなくても一発で掛かった。<br>
+「暖気できないけど堪えてくれよ…」労わりながらゆっくりと走り出す。<br>
+目指すは夜景が綺麗という話の某M峠。温もってないので回転数は抑え気味で国道に合流し、微かに残る町の喧騒に溶け込んでいった…。<br>
+<br>
+30分ぐらいは経っただろうか。時刻は4時半過ぎ。<br>
+2～3速で気持ちよく登っていく。ヘッドライトが照らす、右や左方屈曲ありの標識と、ガードレールの反射鏡だけが進路を教えてくれている。ここは旧道。こんな深夜には車も全く通らない。<br>
+「ここまで暗いと星が綺麗だろうな…」　寒気と戦いながらふと夜空を見上げる。なんだか綺麗だったが星座の知識は無い。ギリギリ分かるオリオン座を見つけ「オリオン座だ。」と習いたての小学生のような独り言を呟いた。<br>
+<br>
+ようやく夜景の見える場所に着いた。……確かに綺麗だが、遠すぎてなんだか微妙だ……。期待していただけあって、「なんだかなぁ」と思った。<br>
+さらに上の方へ登って行った。数分程走り、頂上と言われる所に着いた。<br>
+この場所は昔、ドライブインがあり、夏の昼間なんかには向かいの家の軒先で焼きトウモロコシなんかが売っていたらしいが、ドライブインは無くなり、旧道に成り下がり、跡に残っていた自販機も撤去され、微かに痕を残すのみになってる。<br>
+なんだか悲しくなり、数分程休憩したのち復路へと走り出した。<br>
+<br>
+X0kmで峠を下る。結構な傾斜があるのでシフトペダルを踏んでクラッチを切った状態でも惰性でそのぐらい出る。<br>
+風を切っていく。あれだけ遠くに見えていた町が近づいてくる。<br>
+
+町に着いた。狂ったようなスピードを正常に戻し、スピードを得た好奇心を惰性で滑らせ家へと帰った。西の空は完全に色づいていた。<br><br><br>
+
+
 <h3>パクった　　　　　　　　　　　　　　　2023年10月17日</h3>
 更新用のページ作ろうかな…とか思っていたが、重い腰が上らなかったので、柴さんのHPの『最終更新日』の配置をパクった(^^;<br>
-こりゃ、快適、快適。まだ本格的には利用してないから、たぶんだけど(^^;<br>
+こりゃ、快適、快適。まだ本格的には利用してないから、たぶんだけど(^^;
 <br><br><br>
 <h3>JPG　　 　　　　　　　　　　　　　　　2023年10月12日</h3>
 急に9X年～05年辺りまで使用されていたチョロQ公式のHPを掘り起こしたくなったので掘り起こした。<br>
