--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,9 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>いつのまにか11月　　　　　　　　　　　2023年11月3日</h3>
+いやはや、ボーっとしてたらもう11月…特に話す話題も無いまま2024年になるんだろうなぁ(^^;いやホント勘弁してくれー<br>
+<br><br><br>
 <h3>WinXPからどうも　　　　　　　　　　　2023年10月22日</h3>
 前に書き込んだ古いPCゲーム用のwinXPでもHPが編集できるように環境を整えた。セキリュティ的にはよろしくないが快適である。<br>
 まあ、ごろ寝しながらｶｷｺできるって言ったって、ここの更新頻度は上がらないとは思うが…(^^;<br>
