--- a/kuruma/minicar/macransaCQ/macransaCQ.html
+++ b/kuruma/minicar/macransaCQ/macransaCQ.html
@@ -28,7 +28,7 @@
 
 <a href="https://mizutisann.github.io/HP/img/kuruma/minicar/macransaCQ/macransacq%20(2).JPG"><img src="https://mizutisann.github.io/HP/img/kuruma/minicar/macransaCQ/Resized/macransacq (2).jpg" border="0" width="512" height="383"></a><br>
 フロントを1mm厚のプラ板で作成。ゼンマイと車軸を仮付けし、しっかりとタイヤの収まりを確認しましょう。ズレてたら悲惨なので。<br>
-ちなみにこの道具たち、すべて100均の物だったり（パテとプラ板も100均）　金ねぇんだわ(^^;<br><br>
+ちなみにこの道具たち、ピンセット以外、すべて100均の物だったり（パテとプラ板も100均）　金ねぇんだわ(^^;<br><br>
 
 <a href="https://mizutisann.github.io/HP/img/kuruma/minicar/macransaCQ/macransacq%20(3).JPG"><img src="https://mizutisann.github.io/HP/img/kuruma/minicar/macransaCQ/Resized/macransacq (3).jpg" border="0" width="512" height="383"></a><br>
 <a href="https://mizutisann.github.io/HP/img/kuruma/minicar/macransaCQ/macransacq%20(4).JPG"><img src="https://mizutisann.github.io/HP/img/kuruma/minicar/macransaCQ/Resized/macransacq (4).jpg" border="0" width="512" height="383"></a><br>
