--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,11 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>自称逆張りオタクの憂鬱　　　　　　　　2023年11月12日</h3>
+近年、自分が流行りから逃れた枯れたコンテンツが、何故か流行りの方向へと流れる事が多い様に感じる。<br>
+まあ、いい事と言えばいい事なのかも知れないが、人の少ない所へと移った先がこれなので、まあまあ複雑な気持ち。<br>
+そもそも逆張りオタクというのも最近の流行りな気がしてきている。自己言及のパラドックス的な？(^^;<br>
+<br><br><br>
 <h3>いつのまにか11月　　　　　　　　　　　2023年11月3日</h3>
 いやはや、ボーっとしてたらもう11月…特に話す話題も無いまま2024年になるんだろうなぁ(^^;いやホント勘弁してくれー<br>
 <br><br><br>
