--- a/zakki.html
+++ b/zakki.html
@@ -7,20 +7,31 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>クラッチ練習中・・・　　　　　　　　　2023年12月1日</h3>
+最近、とあるゼロハン原付に乗ってマニュアルクラッチの練習をしている。（結構珍しいバイクなのでここでは伏せておく）<br>
+まあまあ慣れて来たのでエンストはしなくなったが、スムーズな発進というのがまあまあ難しい(^^;<br>
+ああ、早く4輪の免許取らないとなぁ…。<br>
+ちなみに4輪はアセットコルサというゲームで少々練習をしていたりする。まあもっぱら首都高MODでローリングしてるけどね(^^;<br>
+某オンライン鯖でそれっぽい名前を見かけたらよろしく！なんてね。（ここ見てる人でやってる人は居ないだろ）<br>
+<br><br><br>
+
 <h3>自称逆張りオタクの憂鬱　　　　　　　　2023年11月12日</h3>
 近年、自分が流行りから逃れた枯れたコンテンツが、何故か流行りの方向へと流れる事が多い様に感じる。<br>
 まあ、いい事と言えばいい事なのかも知れないが、人の少ない所へと移った先がこれなので、まあまあ複雑な気持ち。<br>
 そもそも逆張りオタクというのも最近の流行りな気がしてきている。自己言及のパラドックス的な？(^^;<br>
 <br><br><br>
+
 <h3>いつのまにか11月　　　　　　　　　　　2023年11月3日</h3>
 いやはや、ボーっとしてたらもう11月…特に話す話題も無いまま2024年になるんだろうなぁ(^^;いやホント勘弁してくれー<br>
 <br><br><br>
+
 <h3>WinXPからどうも　　　　　　　　　　　2023年10月22日</h3>
 前に書き込んだ古いPCゲーム用のwinXPでもHPが編集できるように環境を整えた。セキリュティ的にはよろしくないが快適である。<br>
 まあ、ごろ寝しながらｶｷｺできるって言ったって、ここの更新頻度は上がらないとは思うが…(^^;<br>
 あと、XPで困ることといえば、Misskey.ioにログインできないこと(^^;　書き込めないしTLも見れない。悲しい。<br>
 あと(^^;が一発変換で出せない。また今度設定しておかないとな…。←そして設定せずに時間だけが流れるやつ(^^;<br>
 <br><br><br>
+
 <h3>この話はおおよそフィクションです　　　2023年10月17日</h3>
 午前三時、寝る子は寝る、泣く子は泣く丑の刻。生活リズムが一周回ってきた私は、外出計画を頭の中で練っていた。<br>
 数十分は過ぎた。重い腰を上げ、抜き足差し足でヘルメットとグローブを手に入れる。鍵は持った。免許証、財布、スマホも持った。……一眼レフも持っていくつもりだったが充電器が探せなかった。<br>
