--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,16 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>垢消しについて思ってる事　　　　　　　2023年12月2日</h3>
+某N氏がアカウントを消去するらしい。あの人はRTA界を賑わわせて、大きな功績を残した人だった。<br>
+本当に消して良かったのだろうか。<br>
+ネットは地層のようなものだと感じる時が自分にはある。大きな功績は大きな地層になる。<br>
+それが無くなると、少々のアーカイブを残し大穴が空く。その穴が埋まることは早々無い。<br>
+<br>
+自分も偶に垢消しをしたい時がある。別に大きな功績は無いし消しても誰も気づかないかもしれない。<br>
+ただ、ネットをサルベージしていると良く見る『404 not found』が自分のページに表示されているのを考えると寂しい。<br>
+ちょっとだけ遠い未来の誰かが見て、ほんわかしてくれたら嬉しいかな、と思っている。<br><br><br>
+
 <h3>クラッチ練習中・・・　　　　　　　　　2023年12月1日</h3>
 最近、とあるゼロハン原付に乗ってマニュアルクラッチの練習をしている。（結構珍しいバイクなのでここでは伏せておく）<br>
 まあまあ慣れて来たのでエンストはしなくなったが、スムーズな発進というのがまあまあ難しい(^^;<br>
