--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,18 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>BGM　　　　　　　　　　　　　　　　　2023年12月5日</h3>
+ジュークボックスを前にして、100円玉を握りしめる。<br>
+この酒場のBGMはジュークボックスから鳴っていた。こういう時、脳内で卯酉東海道が流れる。中学三年の時の記憶と共に。<br>
+<br>
+修学旅行数日前だった。担任から、BGM替わりにバスで流すCDを持ってこいとの話だった。<br>
+旅というとこで、卯酉東海道を持っていた。少女二人が鉄道旅で無駄話をするアルバム、良い感じだろう、と。<br>
+本当に持って行っていいのかどうか、葛藤したが、やって後悔したほうがいいと、CDを持って行った。どうやらCDを持ってきた人は自分一人のようだった。<br>
+修学旅行当日、担任が「んじゃあ、そろそろ〇〇が持ってきたCDでも流すかー」ｶﾞｻｺﾞｿと、張り詰めた、恣意的な感じで再生してしまった。バス中が”音楽”として聴いている。<br>
+こっちは滝汗である。幸いな事に、3トラック目に移行した所で<s>自分勝手な</s>俗に言うカースト上位の人間が「変えてい～ぃ？」と聞いてきたので快諾した。ずっとK-POPを流されていたのは自分にとって不快だったが…。<br>
+<br>
+とりあえず、聞き覚えのある曲を選択する。LP盤が入れ替わり曲が流れ始める。ここの人々は曲が変わろうと、どうでもいい雑談をしている。あの時もこういう雰囲気だったら良かったのだが…。<br>
+<br><br><br>
 <h3>垢消しについて思ってる事　　　　　　　2023年12月2日</h3>
 某N氏がアカウントを消去するらしい。あの人はRTA界を賑わわせて、大きな功績を残した人だった。<br>
 本当に消して良かったのだろうか。<br>
