--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,11 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>年末 　　　　　　　　　　　　　　　　2023年12月30日</h3>
+気が付けば2023年もあと1日と少々。<br>
+いやはや、あまり進歩の無い一年だった気が、まだ6月ぐらいの気分だし(^^;<br>
+来年こそなんかしたいねー(^^;（そんな意気込みで大丈夫なのか？）<br><br><br>
+
 <h3>BGM　　　　　　　　　　　　　　　　　2023年12月5日</h3>
 ジュークボックスを前にして、100円玉を握りしめる。<br>
 この酒場のBGMはジュークボックスから鳴っていた。こういう時、脳内で卯酉東海道が流れる。中学三年の時の記憶と共に。<br>
