--- a/zakki.html
+++ b/zakki.html
@@ -10,7 +10,8 @@
 <h3>年末 　　　　　　　　　　　　　　　　2023年12月30日</h3>
 気が付けば2023年もあと1日と少々。<br>
 いやはや、あまり進歩の無い一年だった気が、まだ6月ぐらいの気分だし(^^;<br>
-来年こそなんかしたいねー(^^;（そんな意気込みで大丈夫なのか？）<br><br><br>
+来年こそなんかしたいねー(^^;（そんな意気込みで大丈夫なのか？）<br>
+P.S.去年も全く同じような事をここに書き残してた。全く進歩がねェー(^^;<br><br><br>
 
 <h3>BGM　　　　　　　　　　　　　　　　　2023年12月5日</h3>
 ジュークボックスを前にして、100円玉を握りしめる。<br>
