--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
 <div align="center">
 <FONT SIZE=5>～𧃴折り～</FONT><f>
 <FONT SIZE=-3>みずちーさんのHP</FONT><f><br><br>
-<img alt="カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル"src="https://mizutisann.github.io/HP/img/home/hometop03.png" border="0" width="512" height="250"><br>
-<!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり-->
+<img alt="辰だけに辰巳PA(^^;、謎のうちの子とエスハチ"src="https://mizutisann.github.io/HP/img/home/hometop04.png" border="0" width="512" height="250"><br>
+<!-- 02.png 謎のうちの子2　持ってるのはMSXのつもり--><!-- 03.png カナ・アナベラルのつもり 背景は今や面影も無い某M峠の幽霊トンネル-->
 <FONT SIZE=-3>アクセスカウンタの置き方が分からなかったのでキリ番踏んでもバレません。うわーん(^^;</FONT><br><br>
 <a href="https://mizutisann.github.io/HP/syoukai"><img alt="管理人紹介"  src="https://mizutisann.github.io/HP/img/home/kanrinin.png" border="0" width="128" height="32">管理人っぽい人の紹介です。<br></a>
 <FONT SIZE=-3 COLOR=#999999>最終更新日：令和5年10月1日</FONT><br>
