--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,11 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>あけましておめでとうございます 　　　2024年1月1日</h3>
+2024年あけましておめでとうございます。<br>
+いやはや、去年はあまり進歩がなかった一年だったので、なんとかしたいですね(^^;<br>
+何はともあれ令和6年も、のんびり忙しなく過ごしていこうと思いま～す（それでいいのか？(^^;）<br><br><br>
+
 <h3>年末 　　　　　　　　　　　　　　　　2023年12月30日</h3>
 気が付けば2023年もあと1日と少々。<br>
 いやはや、あまり進歩の無い一年だった気が、まだ6月ぐらいの気分だし(^^;<br>
