--- a/zakki.html
+++ b/zakki.html
@@ -10,7 +10,8 @@
 <h3>あけましておめでとうございます 　　　2024年1月1日</h3>
 2024年あけましておめでとうございます。<br>
 いやはや、去年はあまり進歩がなかった一年だったので、なんとかしたいですね(^^;<br>
-何はともあれ令和6年も、のんびり忙しなく過ごしていこうと思いま～す（それでいいのか？(^^;）<br><br><br>
+何はともあれ令和6年も、のんびり忙しなく過ごしていこうと思いま～す（それでいいのか？(^^;）<br><br>
+P.S.トプ画変更しました～。年賀新年の謎のうちの子(^^;、名前があればいいのだが、誰かつけてくれ～（他力本願）<br><br><br>
 
 <h3>年末 　　　　　　　　　　　　　　　　2023年12月30日</h3>
 気が付けば2023年もあと1日と少々。<br>
