--- a/syoukai.html
+++ b/syoukai.html
@@ -4,28 +4,65 @@
   <title>みずちーさんのHP 管理人紹介</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
-<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://cdn.discordapp.com/attachments/889847829063933972/1038397619971575838/bakg1.png">
-  <img src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353684328528/kanrinin.png">
-<div align="left">
+<body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://mizutisann.github.io/HP/img/bakg1.png">
+  <img src="https://mizutisann.github.io/HP/img/home/kanrinin.png">
+<div align="center">
 <br><br>
-　　幻名　　　　　　　　　　　　　みずちーさん<br>
-　　年齢　　　　　　　　　　　　　永遠の十代後半<br>
-　　趣味　　　　　　　　　　　　　ゲエムとか機械とか。なんかいろいろ。<br>
-　　座右の銘　　　　　　　　　　　この町は嫌いだ。忘れたい思い出が染みついた場所だから。<br>
-　　好きな言葉　　　　　　　　　　行けたら行く、知らんけど、(^^;　（って最後の言葉じゃねー(^^;）<br>
-　　好きな飲み物　　　　　　　　　ルートビア、ココア、ミルクセーキ、寒い日に飲む紅茶or珈琲<br>
-　　好きな音楽　　　　　　　　　　YMO、平沢進、FM音源、東方のBGM、鍵のBGM、ナントカDで流れてるユーロビート、大瀧詠一とか偶に聴く<br>
-　　好きなゲエム　　　　　　　　　東方原作STG、CLANNAD、チョロQシリーズ<br>
-　　好きなゲエム機　　　　　　　　PSX、N64<br>
-　　好きなアニメ　　　　　　　　　serial experiments lain、ぼっち・ざ・ろっく！<br>
-　　好きなパソコン　　　　　　　　PC-9821AP2、今のメインPC<br>
-　　嫌いなパソコン　　　　　　　　分解がヤケにメンドクサイやつ、アップルのPC（oldMacは良いがテメーはダメだ）<br>
-　　好きな車　　　　　　　　　　　ホンダS500,S600,S800、その辺で偶に走ってる90s以前のドノーマル、2ケタナンバーの車<br>
-　　嫌いな車　　　　　　　　　　　JDMとか言ってる奴の車、ワ〇ンR<br>
-　　好きな軍事家　　　　　　　　　特にいません<br>
-　　好きなお家　　　　　　　　　　和風なお家　ガレージとか欲しい。<br>
-　　好きな呪い　　　　　　　　　　存在ごと消えてくれる奴<br>
-　　よく聴く曲ジャンル　　　　　　ピアノソロ、ギターソロ、テクノ、チップチューン、FM音源、ユーロビート、トランス…みたいな感じかな？<br>
+<table border="1" width="809">
+
+  <tbody>
+    <tr>
+      <td width="157" align="center">幻名</td>
+      <td align="center" width="636">みずちーさん</td>
+    </tr>
+    <tr>
+      <td width="157" align="center">年齢</td>
+      <td align="center" width="636">見た目は10代中身はオジサン</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">趣味</td>
+      <td align="center" width="636">ゲームとか機械いじりとかツーリングとか、なんかいろいろ</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">座右の銘</td>
+      <td align="center" width="636">行けたら行く・しらんけど。・(^^;</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">好きな飲み物</td>
+      <td align="center" width="636">ルートビア、ココア、ミルクセーキ、寒い日に飲む紅茶or珈琲</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">好きな音楽</td>
+      <td align="center" width="636">歌詞の無い曲、ゲームBGMとかが主。東方、首都高バトル、湾岸ミッドナイト<br>そこそこにP-MODELや平沢進、古い時代のJ-POPとか。FM音源も好き。</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">好きなゲエム</td>
+      <td align="center" width="636">東方原作STG（主にwin版初期）、CLANNAD、首都高バトル、チョロQ、太陽のしっぽ</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">好きなアニメ</td>
+      <td align="center" width="636">serial experiments lain、ぼっち・ざ・ろっく！、16bitセンセーション another layer</td>
+    </tr>
+        <tr>
+      <td width="157" align="center">好きなパソコン</td>
+      <td align="center" width="636">PC-9821AP2、今のメインPC</td>
+    </tr>
+            <tr>
+      <td width="157" align="center">好きな車</td>
+      <td align="center" width="636">ホンダ ASシリーズ（特にS800）</td>
+    </tr>        <tr>
+      <td width="157" align="center">好きな軍事家</td>
+      <td align="center" width="636">特にいません</td>
+    </tr>        <tr>
+      <td width="157" align="center">好きなお家</td>
+      <td align="center" width="636">和風なお家・広いガレージ欲しい。</td>
+    </tr>        <tr>
+      <td width="157" align="center">好きな呪い</td>
+      <td align="center" width="636">存在ごと消えてくれる奴</td>
+    </tr>       
+  </tbody>
+</table>
+
 </DIV><BR>
 <div align="center">
 <H3>最近のお勧め</H3>
