--- a/syoukai.html
+++ b/syoukai.html
@@ -17,7 +17,7 @@
     </tr>
     <tr>
       <td width="157" align="center">年齢</td>
-      <td align="center" width="636">見た目は10代中身はオジサン</td>
+      <td align="center" width="636">見た目は若いが中身はオジサン</td>
     </tr>
         <tr>
       <td width="157" align="center">趣味</td>
