--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,11 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>またまた改装中…　　　　　　　  　　　2024年1月4日</h3>
+HTMLを弄って『管理人紹介』と『異的幻想郷』を改装…。<br>
+多少は見やすくなったと思います。知らんけど(^^;<br>
+雑記も年を跨ぐし折角なのでページを分けようか悩んでます。うーん…どうしようか…(^^;<br><br><br>
+
 <h3>あけましておめでとうございます 　　　2024年1月1日</h3>
 2024年あけましておめでとうございます。<br>
 いやはや、去年はあまり進歩がなかった一年だったので、なんとかしたいですね(^^;<br>
