--- a/link.html
+++ b/link.html
@@ -46,13 +46,13 @@
   <tbody><tr><td width="200" align="center"><a href="http://cynthia.cc/1996/">
   <img src="https://mizutisann.github.io/HP/img/link/1996_bnr.gif" width=200 height=40></a></td>
              <td align="center" width="636">甦れ1996<br></td></tr></tbody></table>
-             主に東方旧作を掘り返しているウェブペエジ。<br><br>
+             主に東方旧作を掘り返しているウェブペエジになります。冴月麟の考察も。<br><br>
 
 <table border="1" width="809">
   <tbody><tr><td width="200" align="center"><a href="https://shiosyakeyakini.info/?index">
   <img src="https://mizutisann.github.io/HP/img/link/banner-niku.png" width=200 height=40></a></td>
              <td align="center" width="636">しゃーぷにくびーふ<br></td></tr></tbody></table>
-             その昔の東方を纏めてくれています。misskey.ioクライアントアプリ『Miria』の開発者でもあります。<br><br>
+             その昔の東方を纏めてくださってます。misskey.ioクライアントアプリ『Miria』の開発者でもあります。<br><br>
 
 <table border="1" width="809">
   <tbody><tr><td width="200" align="center"><a href="https://nrr08.com/">
@@ -60,6 +60,35 @@
              <td align="center" width="636">こしのみちのくに<br></td></tr></tbody></table>
              その昔の東方についてアレコレ色々と考察しているウェブペエジです。<br><br>
 
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="http://ohgosho.ehoh.net/">
+  <img src="https://mizutisann.github.io/HP/img/link/thbbr.jpg" width=200 height=40></a></td>
+             <td align="center" width="636">東方備望録<br></td></tr></tbody></table>
+             東方原作内で使用されている素材の元ネタを掘り返しているウェブペエジです。<br><br>
+
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="http://thwiki.info/">
+  <img src="https://mizutisann.github.io/HP/img/link/thwiki-banner.png" width=200 height=40></a></td>
+             <td align="center" width="636">東方Wiki<br></td></tr></tbody></table>
+             世代を超えて東方について纏め上げてられているWikiです。今でも細々と更新中？<br><br>
+
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="https://en.touhouwiki.net/wiki/Touhou_Wiki">
+  <img src="https://mizutisann.github.io/HP/img/link/touhouwiki_banner.png" width=200 height=40></a></td>
+             <td align="center" width="636">Touhou Wiki<br></td></tr></tbody></table>
+             海外ニキが作った海外向けの東方Wikiです。こっちの方が詳しい記事もあったり(^^;<br><br>
+
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="https://wikiwiki.jp/thk/">
+  <img src="https://mizutisann.github.io/HP/img/link/thkouryaku.png" width=200 height=40></a></td>
+             <td align="center" width="636">東方攻略Wiki<br></td></tr></tbody></table>
+             名前のままです。（バナーが無かったのでヘッダーをリサイズして使用してます。問題があれば報告下さい。）<br><br>
+
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="http://radical-d.extrem.ne.jp/">
+  <img src="https://mizutisann.github.io/HP/img/link/radical-d.png" width=200 height=40></a></td>
+             <td align="center" width="636">Radical Discovery<br></td></tr></tbody></table>
+             旧作から東方ゲーム中の会話を纏めてくださっています。最近の更新が無いのが残念…。<br><br>
 
 </div>
 <div align="center">
