--- a/link.html
+++ b/link.html
@@ -82,7 +82,7 @@
   <tbody><tr><td width="200" align="center"><a href="https://wikiwiki.jp/thk/">
   <img src="https://mizutisann.github.io/HP/img/link/thkouryaku.png" width=200 height=40></a></td>
              <td align="center" width="636">東方攻略Wiki<br></td></tr></tbody></table>
-             名前のままです。（バナーが無かったのでヘッダーをリサイズして使用してます。問題があれば報告下さい。）<br><br>
+             名前通りです。（バナーが無かったのでヘッダーをリサイズして使用してます。問題があれば報告下さい。）<br><br>
 
 <table border="1" width="809">
   <tbody><tr><td width="200" align="center"><a href="http://radical-d.extrem.ne.jp/">
