--- a/zakki.html
+++ b/zakki.html
@@ -7,6 +7,13 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
+<h3>WindowsXPの憂鬱 　　　                2024年1月8日</h3>
+古ゲー専用WinXPノートPCで、Githubの編集が出来なくなってしまった。<br>
+Misskey.ioも見れないのが気になったので、ブラウザを乗り換える事とした。<br>
+結果としては基本的にはBasilisk、動かないページやMisskey.ioは魔改造chrome115ということにした。<br>
+これである程度快適にXPが使えるようになったとさ。<br>
+（魔改造chrome、便利なんだけどメモリの消費が半端無いのよねー(^^;　あとなぜか日本語入力時なんかバグるし。）<br><br><br>
+
 <h3>またまた改装中…　　　　　　　  　　　2024年1月4日</h3>
 HTMLを弄って『管理人紹介』と『異的幻想郷』を改装…。<br>
 多少は見やすくなったと思います。知らんけど(^^;<br>
