--- a/zakki.html
+++ b/zakki.html
@@ -7,7 +7,14 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <br>
-<h3>WindowsXPの憂鬱 　　　                2024年1月8日</h3>
+<h3>ラグーン号の話　　　　　　　　　　　　2024年1月9日</h3>
+20年以上前に消え去った33Rのチューニングカーについて纏めている同人誌を買った。<br>
+発送は1月19日らしいので20日には届くのだろうか。1月20日はその33R。通称、ラグーン号のオーナーであるオスカルGAKU氏の命日だ。<br>
+客当たりも良かったらしく、悪い話も目にしたことが無いぐらいだが、最期は店が隠していた借金の取立てに追われ八王子のビルから……らしい。<br>
+（リアタイしていた訳ではないし、２ちゃんねるで聞いた話なので真偽は不明だが…）<br>
+あれから22年が経とうとしている。ブルメタの33Rはレーシングラグーンの中で走り続けている…。<br><br><br>
+
+<h3>WindowsXPの憂鬱　　　　　　　  　2024年1月8日</h3>
 古ゲー専用WinXPノートPCで、Githubの編集が出来なくなってしまった。<br>
 Misskey.ioも見れないのが気になったので、ブラウザを乗り換える事とした。<br>
 結果としては基本的にはBasilisk、動かないページやMisskey.ioは魔改造chrome115ということにした。<br>
