--- a/home.html
+++ b/home.html
@@ -26,7 +26,11 @@
 <a href="https://mizutisann.github.io/HP/link"><img alt="リンク置き場"  src="https://mizutisann.github.io/HP/img/home/iteki.png" border="0" width="128" height="32">リンク置き場です。偶に異的。<br></a>
 <FONT SIZE=-3 COLOR=#999999>最終更新日：令和6年1月4日</FONT><br>
 
-<br><hr>
+<br><hr><br>
+連絡などは各種SNSにてお願いします。<br>
+misskey.io / @mizutisann<br>
+Discord / mizutisann_6806<br>
+Twitter / mizutisann<br>
 <br>
 <a href="https://mizutisann.github.io/HP/top"><img alt="バナー"  src="https://mizutisann.github.io/HP/img/banner-tuzura.png" width="200" height="40" border="0"><br></a>クリックでトップへ
 </DIV>
