--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,15 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">雑記を改装してみた</font><br></td>
+             <td align="center" width="200">2024年1月18日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+年が変わったのをきっかけに雑記に手を加えてみた。ちょっと読みやすくなったかな？<br><br>
+年明け前の雑記まで同じレイアウトにするのは大変なので、ページを分けて表示するようにした。<br>
+一番下にある『過去の雑記はここから』より今までの雑記を閲覧することが出来ますのでお見知りおきを(^^;<br>
+…ったく深夜4時に何してるんだか(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ラグーン号の話</font><br></td>
              <td align="center" width="200">2024年1月9日<br></td></tr></tbody></table>
