--- a/link.html
+++ b/link.html
@@ -82,13 +82,19 @@
   <tbody><tr><td width="200" align="center"><a href="https://wikiwiki.jp/thk/">
   <img src="https://mizutisann.github.io/HP/img/link/thkouryaku.png" width=200 height=40></a></td>
              <td align="center" width="636">東方攻略Wiki<br></td></tr></tbody></table>
-             名前通りです。（バナーが無かったのでヘッダーをリサイズして使用してます。問題があれば報告下さい。）<br><br>
+             名前通りです。知識が欲しい時につかえると思います。<br><br>
 
 <table border="1" width="809">
   <tbody><tr><td width="200" align="center"><a href="http://radical-d.extrem.ne.jp/">
   <img src="https://mizutisann.github.io/HP/img/link/radical-d.png" width=200 height=40></a></td>
              <td align="center" width="636">Radical Discovery<br></td></tr></tbody></table>
              旧作から東方ゲーム中の会話を纏めてくださっています。最近の更新が無いのが残念…。<br><br>
+
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="http://www7a.biglobe.ne.jp/~naopy/index.html">
+  <img src="https://mizutisann.github.io/HP/img/link/nhl-bn3.png" width=200 height=40></a></td>
+             <td align="center" width="636">Naopy Hobby Land<br></td></tr></tbody></table>
+             パソコンや繪を扱っているサイトです。PC-98を買うときには目を通しておくといいでしょう。<br><br>
 
 </div>
 <div align="center">
