--- a/kuruma/minicar/minicar.html
+++ b/kuruma/minicar/minicar.html
@@ -7,8 +7,10 @@
 
 <div align="center">
 <h2>車関係の間 小さいヤツ</h2>
-<br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/macransaCQ/macransaCQ.html">マクランサT-3のチョロQを作る</a>
-<br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/z32tomika1/z32tomica1.html">50円で買ったZ32のモータートミカを直す。パート1</a>
+<br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/macransaCQ/macransaCQ.html">マクランサT-3のチョロQを作る</a><br>
+<img src="https://mizutisann.github.io/HP/kuruma/minicar/macransacqs.jpg" border="0" width="320" height="239">
+<br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/z32tomika1/z32tomica1.html">50円で買ったZ32のモータートミカを直す。パート1</a><br>
+<img src="https://mizutisann.github.io/HP/kuruma/minicar/z32tomika1.jpg" border="0" width="320" height="239">
 <br><br><br>
 
 </div>
