--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,36 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">手軽に乗れる乗りたい車が無い</font><br></td>
+             <td align="center" width="200">2024年1月19日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+だらだらと書いてます。結論は「車高杉やろ、あほくさ。」です。<br>
+<br>
+先日、両親が足として乗る車を決めに中古車販売会場へと足を運んだついでに色々見て回った。<br>
+私としてはMT車に乗りたいので場内の車を片っ端から覗いたが、良さげなのは65万の3代目ワゴンRとKトラぐらいだった。<br>
+挙句の果てに某社ディーラーの人から「MTは遅いですヨ。」と言われる始末。<br>
+その人からはZ33の3.5Lをお勧めされたが、それでも100万は掛かると言われた。（保険料なども含まれているのかも知れないが）<br>
+<br>
+家の本棚に2009年のノスタルジックヒーローがある。確か小学生の時に買ったか貰ったかした記憶がある。<br>
+中古車欄を見てみるとDR30鉄仮面が55万、SA22Cが39万円、AE86トレノ3ドアが58万とある。<br>
+もちろんMTだ。というかATの方が高いまである。この時代は他にも100万以下でお釣りがくる、その手の車が沢山あった。<br>
+（因みに旧車となるとS30ZのL28ソレタコデュアルで190万、エスロクが200万。クソ安い。）<br>
+<br>
+こういう時代に触れていた身として、昨今の中古車のインフレは、なんというか…こう、来るものがある…。<br>
+順調に行けば90年代の車両も今頃底値になっていたのだろうが、映画やゲームの影響、円安や25年ルールも合わさり海外などへ流出。<br>
+そしてAT限定免許が一般的となった00年代の、母数の少ない車へ手を伸ばすもんだから市場が吊り上がる。<br>
+（主な理由として上記のように思い込んでいる。3割ぐらい間違っているかもしれないが。）<br>
+<br>
+結局、昔の数倍頑張って貯金をして車を持たないといけない。維持費もバカにならないというのに。<br>
+そんな感じで思うことがあり、最近は教習所に行けてない。<br>
+やっぱり、自分みたいなよく分からないオタクはヤフオクの”書類有り”でも買えというのだろうか…。<br>
+<br>
+Ｐ．Ｓ．　最近、昔の刑事ドラマのスタントシーンが見れなくなった。古き良き車たちが破壊されていく……。うう。欲しいよー……。<br>
+
+
+</td></tr></tbody></table><br><br><br>
+
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">雑記を改装してみた</font><br></td>
              <td align="center" width="200">2024年1月18日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
