--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,26 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">令和６年のインターネットダイバー</font><br></td>
+             <td align="center" width="200">2024年1月24日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+ﾋの方で柴さんがUNオーエンの某アレンジ曲の謎の背景画像の元画像を掘り起こしていた。凄え。<br>
+自分は、前に一度画像検索をして遊んでたが、あまりにも膨大な数ヒットするので、なんか面倒になって早々に止めてしまった。<br>
+最近は、年明け前からぼちぼちと例大祭版妖々夢の詳細を集めているが、十中八九、永夜抄の話か完売の話なので頭を抱えている。<br>
+明日、Misskey.ioにでも乗っけておくかなぁ。正直、これ以上有力な情報は出そうに無いし…。段々飽きてきたし…。<br>
+<br>
+この前、オンラインで買った同人誌が届いた。内容は90年代後半から00年代初期まで存在していたチューニングカーの本だ。<br>
+当時の雑誌や閉鎖されたHPを網羅し、どうやったらそこまで情報を集められるの？ってぐらい、よく纏められていた。<br>
+東方で言う、ほんのひなんじょ·東方蒐集所·時遊戯画みたいなポータルサイトでもあったのだろうか？<br>
+<br>
+通路が分かりにくいだけで、どこかに自分の探している情報があるのかもしれない。<br>
+でも、当時の知識がそれなりに必要。自分はまだまだだなと思った。<br>
+<br>
+まあ、東方に関しては、カキコ（死語かも）した人からすると完全に黒歴史な気がするので、ダイバーというか墓荒らしなんだろうけどね(^^;<br>
+当時、スッパテンコーとか言ってたヲタクたち、元気にやってるのかな…。<br>
+
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">手軽に乗れる乗りたい車が無い</font><br></td>
              <td align="center" width="200">2024年1月19日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
@@ -33,8 +53,6 @@
 やっぱり、自分みたいなよく分からないオタクはヤフオクの”書類有り”でも買えというのだろうか…。<br>
 <br>
 Ｐ．Ｓ．　最近、昔の刑事ドラマのスタントシーンが見れなくなった。古き良き車たちが破壊されていく……。うう。欲しいよー……。<br>
-
-
 </td></tr></tbody></table><br><br><br>
 
 
