--- a/link.html
+++ b/link.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" >
 </head>
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png"><div align="center">
-<img src="https://mizutisann.github.io/HP/img/home/iteki.png"><br><br>敬称略です。<br><br>
+<img src="https://mizutisann.github.io/HP/img/home/iteki.png"><br><br>敬称略です。順番は割とてきとー。<br><br>
 <table border="1" width="809">
 
   <tbody><tr><td width="200" align="center"><a href="https://www16.big.or.jp/~zun/">
@@ -95,6 +95,12 @@
   <img src="https://mizutisann.github.io/HP/img/link/nhl-bn3.png" width=200 height=40></a></td>
              <td align="center" width="636">Naopy Hobby Land<br></td></tr></tbody></table>
              パソコンや繪を扱っているサイトです。PC-98を買うときには目を通しておくといいでしょう。<br><br>
+
+<table border="1" width="809">
+  <tbody><tr><td width="200" align="center"><a href="https://yuki.kitune.info/">
+  <img src="https://mizutisann.github.io/HP/img/link/upas_yuyu.png" width=200 height=40></a></td>
+             <td align="center" width="636">ゆききつね<br></td></tr></tbody></table>
+             初期の東方や蓬莱人形の人。絵柄が結構好きだったり(^^;　かなり昔から見かける方です。すげえ。<br><br>
 
 </div>
 <div align="center">
