--- a/pc/OLDPC.html
+++ b/pc/OLDPC.html
@@ -9,10 +9,10 @@
 <div align="center">
 <h2>PC関係の間 古いPC</h2>
 <br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldap2act1.html">PC-9821Ap2を直そうとする。そしてヤケド。パート1<br>
-<img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldap2act1.jpg" border="0" width="320" height="111"></a>
+<img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldap2act1.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和4年12月</FONT><br>
 <br><br><a href="https://mizutisann.github.io/HP/pc/oldpc/pcoldclassic2act1.html">Macintosh classic2を直した。パート1<br>
-<img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldclassic2act1.jpg" border="0" width="320" height="111"></a>
+<img src="https://mizutisann.github.io/HP/img/pc/oldpc/pcoldclassic2act1.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和4年10月</FONT><br>
 <br><br><br>
 </div>
