--- a/zakki2.html
+++ b/zakki2.html
@@ -7,6 +7,18 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">たまには短く。</font><br></td>
+             <td align="center" width="200">2024年1月28日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+最近、ここには長文しか書いていなかったので、今日は短く。早く寝たいし(^^;<br>
+<br>
+年明け早々、ちょっと幸先悪い。祖母が精米機で中指を詰めるし（骨折はしていなのでご安心を）（いや、安心できねーよ 汗）<br>
+母親は風邪ひくし。（発熱してるんだったら病院行けよとは思っている）<br>
+<br>
+あれ二つ程か…。そこまで幸先悪くないな（なんじゃそりゃ 汗）<br>
+
+</td></tr></tbody></table><br><br><br>
+
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">令和６年のインターネットダイバー</font><br></td>
              <td align="center" width="200">2024年1月24日<br></td></tr></tbody></table>
