--- a/zakki2.html
+++ b/zakki2.html
@@ -7,6 +7,15 @@
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ゲエムの間</font><br></td>
+             <td align="center" width="200">2024年1月29日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+ついに『開かずの間』…じゃ無かった。『ゲエムの間』を追加しました。<br>
+まあ、ホントに追加しただけなので、まだ中身までは書けていませんが…（なんじゃそりゃ 汗）<br>
+ぼちぼち、おいそれと、それっぽい駄文を追加していく予定なので、気になった人は見ていってくださいな。(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">たまには短く。</font><br></td>
              <td align="center" width="200">2024年1月28日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
