--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,18 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">Do they know the real color of "Silver"?</font><br></td>
+             <td align="center" width="200">2024年2月2日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+ねこねこソフト、『銀色』走破しました。（完全版では無い方ね。）<br>
+いやぁ、つい、次の作品の『朱』を買ってしまうぐらいには凄かった(^^;<br><br>
+側面に18と書かれたラメ入りのシールが輝く、完走した人からは鬱ゲーと言われているこのゲーム。<br>
+どんな願いでも叶えるという銀糸と、それに関わる人の願いや狂気、欲望の見せ方が美しいなと感じた。<br>
+3章は途中で投げ出そうかと考えるほど狂った話でした。4章の構成も凄かった。<br><br>
+全年齢では出せないシナリオだけど、全年齢で出ていたら…。なんて考えてしまう作品でした。<br><br>
+p.s.　現在は『snow』のPE版をやってま～す。『snow』終わったら『AIR』二周目やろっかな…。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ゲエムの間</font><br></td>
              <td align="center" width="200">2024年1月29日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
