--- a/kuruma/minicar/minicar.html
+++ b/kuruma/minicar/minicar.html
@@ -8,10 +8,10 @@
 <div align="center">
 <h2>車関係の間 小さいヤツ</h2>
 <br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/macransaCQ/macransaCQ.html">マクランサT-3のチョロQを作る<br>
-<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/macransacqs.jpg" border="0" width="320" height="111"></a>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/macransacqs.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和5年10月</FONT><br>
 <br><br><a href="https://mizutisann.github.io/HP/kuruma/minicar/z32tomika1/z32tomica1.html">50円で買ったZ32のモータートミカを直す。パート1<br>
-<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1.jpg" border="0" width="320" height="111"></a>
+<img src="https://mizutisann.github.io/HP/img/kuruma/minicar/z32tomika1.jpg" border="0" width="320" height="111"></a><br>
 <FONT SIZE=-3 COLOR=#999999>令和4年11月</FONT><br>
 <br><br><br>
 
