--- a/zakki2.html
+++ b/zakki2.html
@@ -8,13 +8,25 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">あの頃よりも幺樂</font><br></td>
+             <td align="center" width="200">2024年2月4日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+祖母が精米機に指を詰めて以来、通院の手伝いとして週一で田舎へ帰っている。<br>
+そこで「処分するか使ってくれ」と頼まれた携帯電話があった。2015年製のAUの3Gガラケーだ。<br>
+実を言うと、この類の携帯を探していた。この携帯の場合、ヤマハのYMU765というFM機能搭載のチップが入っていて、”幺樂”が鳴る。<br>
+早速家に持ち帰り、前に拾い集めた「.mmf」のファイルを突っ込んで再生してみる。うん。聴き馴染みの音だ。<br><br>
+あと数か月で3G携帯が終わろうとしている。<br>
+昨今、FM音源がまた話題にあがるようになってきた。でも現在のデバイスで再生している以上、PCM音源と言えるだろう。<br>
+”本当の意味でのFM音源”はガラケー全盛期だった『幺樂団の歴史』発売時のあの頃よりも『幺樂』になった気がする。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">Do they know the real color of "Silver"?</font><br></td>
              <td align="center" width="200">2024年2月2日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
 ねこねこソフト、『銀色』走破しました。（完全版では無い方ね。）<br>
 いやぁ、つい、次の作品の『朱』を買ってしまうぐらいには凄かった(^^;<br><br>
 側面に18と書かれたラメ入りのシールが輝く、完走した人からは鬱ゲーと言われているこのゲーム。<br>
-どんな願いでも叶えるという銀糸と、それに関わる人の願いや狂気、欲望の見せ方が美しいなと感じた。<br>
+どんな願いでも叶えるという銀糸と、それに関わる人の願いや狂気、欲望の見せ方が美しいなと感じました。<br>
 3章は途中で投げ出そうかと考えるほど狂った話でした。4章の構成も凄かった。<br><br>
 全年齢では出せないシナリオだけど、全年齢で出ていたら…。なんて考えてしまう作品でした。<br><br>
 p.s.　現在は『snow』のPE版をやってま～す。『snow』終わったら『AIR』二周目やろっかな…。<br>
