--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,21 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">改悪</font><br></td>
+             <td align="center" width="200">2024年2月8日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+ブルースカイの新規アカウントが誰にでも作れるようになったらしい。<br>
+インスタ並みのキラキラSNSを目指し、迷走していた頃のﾋの人が運営しているらしく、私はあまり信用をしていない。<br>
+未だにフォローボタンの色反転の件とかを根に持っている。<br>
+（あと、Misskey.ioが気に入ったのでしばらくそこから動く気は無い。）<br>
+<br>
+改悪といえば、googleの画像検索はマジで使えなくなったと思っている。（本家の方もわやだけど）<br>
+昔は解像度順にソートされていたので割りと察せれたが、最近はどうでもいい機能が追加されてるし、<br>
+ソートもぐちゃぐちゃで何がなんだか…。<br>
+<br>
+いい画像検索エンジン探さないとなぁ。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">あの頃よりも幺樂</font><br></td>
              <td align="center" width="200">2024年2月4日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
