--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,14 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">はてなブログ</font><br></td>
+             <td align="center" width="200">2024年2月9日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+記事を全消去した。発信する場所は少ない方が管理もしやすいし、<br>
+今思うと滅茶苦茶な事を世に出してしまっていたのと、最悪ウェブバックマシーンに残ってるからいいかな。という事で(^^;<br>
+いやはや。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">改悪</font><br></td>
              <td align="center" width="200">2024年2月8日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
