--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,15 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">JSRC GT4 vs 90'sDTM</font><br></td>
+             <td align="center" width="200">2024年2月13日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+Assetto Corsaでオンライン草レースが開かれていたので参加してきた。<br>
+DTMの知識が無いので、軽くコースの走り込みもしたが、予選でミッションブロー。リタイア。<br>
+敗因としては技量不足とG29シフターのギア抜け。うーん、ヘタクソ(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">はてなブログ</font><br></td>
              <td align="center" width="200">2024年2月9日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
