--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,18 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">迷い猫</font><br></td>
+             <td align="center" width="200">2024年2月18日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+カーポートにバイクを仕舞っていると、ビラで見た猫が居たので急いで記載されていた電話に連絡をした。<br>
+隣家の車の下へと逃げた迷い猫と睨めっこしながら昔を思い出す。<br>
+<br>
+物心ついた頃、家で猫を飼っていた。ソイツと一緒に風呂に入った結果、猫アレルギーが判明したり、<br>
+親が噛まれて入院したり、なかなかな猫だったが、ある日突然居なくなった。<br>
+その頃には老猫になっていた。猫は死に目を見せたくない、ということで、あまり捜索はしなかった記憶がある。<br>
+<br>
+電話の人が来た。隣家の車の下に逃げ込んだ事を伝え家に帰る。あの日の無念がちょっと晴れた気がした。<br>
+</td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">JSRC GT4 vs 90'sDTM</font><br></td>
              <td align="center" width="200">2024年2月13日<br></td></tr></tbody></table>
