--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,20 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ガルパン</font><br></td>
+             <td align="center" width="200">2024年2月20日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+ネ友？にガルパンを布教(軟禁)されて見た。<br>
+昔に一度見た時は、ぶっ飛んだネタに追いつ行けず一話離脱したが、吹っ切れたら楽しめた。<br>
+戦車は知識の範囲外なのでネタが分からない部分が多いが、車で例えている画像があり助かった。<br>
+<br>
+ここ半年ぐらい、何故か軍歌系の曲をバックに作業をすることが多く、都度ガルパンが検索に引っかかっていた。<br>
+元ネタを回収できたというのも良かった。作中のカチューシャは歌うのに丁度いいんだよねー。<br>
+<br>
+どうでもいいけど、<br>
+前、無線技術系のｳｽｲﾎﾝ買った時にフリペで貰ったポストカード、思い返してみれば、あんこうチームの無線技士の子だったな…。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">迷い猫</font><br></td>
              <td align="center" width="200">2024年2月18日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
