--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,19 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">JSRC Enjoy Race</font><br></td>
+             <td align="center" width="200">2024年2月20日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+Assetto Corsaでオンライン草レースが開かれていたので参加してきた。その２。<br>
+車種はNAロドスタ改、コースは筑波。自分は前日一時間、当日一時間の練習の後レース開始。<br>
+2レース中、1レースは8位（12人ぐらい居た中の話）、2レースはドベから二番目。<br>
+1レース目はトップ集団からは引き離されるも、Miの方で知り合った人とバチバチのバトル。引き離せたので楽しかった。<br>
+2レース目はトップ集団に何とか付いていくが、5位辺りで迎えた2周目の第二ヘアピン前の緩やかなカーブでプッシュされてスピン。<br>
+ミッションブローしたMiでの知り合いをドベに、ドベから二番目になりましたとさ。(^^;<br>
+<br>
+早い人ってホントに早いから、すげーよな…と思った今日この頃でした。<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ガルパン</font><br></td>
              <td align="center" width="200">2024年2月20日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
