--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,18 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">怪綺談878,000円</font><br></td>
+             <td align="center" width="200">2024年2月29日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+Miの方で触れたが、あまりにも衝撃的だったので触れておく。<br>
+まず、これから買おうとする人。頼むから買わないでくれ。<br>
+2021年にBE〇Pに入荷したFDのみの怪綺談は13万だった。2022年の5月にはヤフ〇クにて完品の夢時空が182,000円で落札されている。<br>
+取説付きでも30～45万と言ったところが相場。<br>
+ただ、クリスマスに起こった幻想郷150万の一件から……。個人に対する愚痴になりそうだったのでこの辺で…(^^;<br>
+<br>
+まあ、ともかく、これを買われると相場がもっとおかしくなってしまう。ギリギリ50万がいい所じゃないかな。なーんて(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">JSRC Enjoy Race</font><br></td>
              <td align="center" width="200">2024年2月20日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
