--- a/PC.html
+++ b/PC.html
@@ -6,7 +6,7 @@
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
-<div align="center"><img alt="PC関係の間"  src="https://cdn.discordapp.com/attachments/889847829063933972/1038616353181007932/PC.png" border="0" width="128" height="32"><br><br><br>
+<div align="center"><img alt="PC関係の間"  src="https://mizutisann.github.io/HP/img/home/PC.png" border="0" width="128" height="32"><br><br><br>
 <a href="https://mizutisann.github.io/HP/pc/PCAT.html">主にPC/AT機<img alt="PC/AT機"  src="https://mizutisann.github.io/HP/img/pc/atbn.png" border="0" width="256" height="125"><br></a>
 <a href="https://mizutisann.github.io/HP/pc/OLDPC.html"><img alt="OLDPC"  src="https://mizutisann.github.io/HP/img/pc/oldbn.png" border="0" width="256" height="125">主に古いPC<br></a><br><br>
 </div>
