--- a/kari.html
+++ b/kari.html
@@ -8,7 +8,7 @@
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <h1>工事中です。しばらくお待ちください。</h1>
 <p>TOP用に～と思って用意したけど没になったメイドさんの繪でも(^^;</p>
-<img src="https://cdn.discordapp.com/attachments/889847829063933972/1038629573929222275/hometop.png">
+<img src="https://mizutisann.github.io/HP/img/TEGAKI_240302_235424.png">
 <p>メイドさんの名前募集中かも(^^;</p>
 </DIV>
 <div align="center">
