--- a/kari.html
+++ b/kari.html
@@ -6,10 +6,9 @@
 </head>
 
 <body bgcolor="#000000" text="#ffffff" link="#006208" vlink="#00d9f8" alink="#0097e6" background="https://mizutisann.github.io/HP/img/bakg1.png">
-<h1>工事中です。しばらくお待ちください。</h1>
-<p>TOP用に～と思って用意したけど没になったメイドさんの繪でも(^^;</p>
+<h1>工事中。</h1>
 <img src="https://mizutisann.github.io/HP/img/TEGAKI_240302_235424.png">
-<p>メイドさんの名前募集中かも(^^;</p>
+<p>メイドさんの名前募集中かも…？(^^;</p>
 </DIV>
 <div align="center">
 <a href="https://mizutisann.github.io/HP/home"><img src="https://mizutisann.github.io/HP/img/modoru.png"><br></a>
