--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,29 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">新XP用PC導入中…</font><br></td>
+             <td align="center" width="200">2024年3月7日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+備忘録といった具合でつらつらと。<br>
+前のNECは、visitが純正なのに無理やりXPを入れていた為ドライバが当たらない物が多数あった。<br>
+他にも不満要素があったので、ハードオフで550円で売っていた富士通FMV-S8350に乗り換えた。が、これもまた曲者だった。<br>
+まず最初に当たった壁がPCにCDドライブが付いていない事。LIVEUSB経由でインスコを試みるも、規約が読み込まれない。<br>
+規約を読み込めるソフトに切り替えてみたが、待ち受けるはブルスク。<br>
+エラーコード（0x0000007B）で検索を掛けるとFDD経由でAHCIドライバを当てるとOKらしいのでやったがダメ。<br>
+とりあえず家に有ったDVDドライブと外付けHDDの基板でDVD経由でのインスコに切り替える。残念ながらブルスク。<br>
+BIOSの設定とにらめっこしたりしたがダメ、nLiteでインスコディスクにドライバを組み込んでもダメ。<br>
+半ばあきらめかけて、ハードオフで買って来たbuffalo製のDVD-USBを使った所、何故か進めてしまった。よく分からん(^^;<br>
+ドライバ関連も曲者で、有志が纏めてくれたドライバの名前とバージョン一覧があったが、<br>
+富士通が何を思ったのかドライバをデッドリンクにしてしまっていて、LEN〇VO、DEL〇、怪しいサイトを巡回して入手した。苦労した。<br>
+<a href="https://www.fujitsu-pc-asia.com/driversupport/selectioninterface/selection.html">ここ</a>にはお世話になった。<br>
+また無線LANカードもIntel製ではないヤツで、初めて触る身としてはよく分からなかった。Google先生様様です。<br>
+<br>
+とりあえず現在、溜まりに溜まった更新をしている中書き込んでいる。ここまま無事に終わってくれよー頼むよー…orz<br>
+次買う事があるのならば、DELLかLENOVOにしよっと………。<br>
+</td></tr></tbody></table><br><br><br>
+
+
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">怪綺談878,000円</font><br></td>
              <td align="center" width="200">2024年2月29日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
