--- a/game.html
+++ b/game.html
@@ -27,7 +27,7 @@
 <table border="1" width="809"><tbody><tr><td width="300" align="center"><a href="https://mizutisann.github.io/HP/kari"><img src="https://mizutisann.github.io/HP/img/game/SB20.jpg" border="0" width="320" height="245"><br></a></td>
 <td align="center" width="200"><a href="https://mizutisann.github.io/HP/kari"><font size="5">首都高バトル2</font></a><br></td></tr></tbody></table><br>
 
-<table border="1" width="809"><tbody><tr><td width="300" align="center"><a href="https://mizutisann.github.io/HP/kari"><img src="https://mizutisann.github.io/HP/img/game/Clannad0.jpg" border="0" width="320" height="245"><br></a></td>
+<table border="1" width="809"><tbody><tr><td width="300" align="center"><a href="https://mizutisann.github.io/HP/game/CLANNAD/CLANNAD"><img src="https://mizutisann.github.io/HP/img/game/Clannad0.jpg" border="0" width="320" height="245"><br></a></td>
 <td align="center" width="200"><a href="https://mizutisann.github.io/HP/kari"><font size="5">CLANNAD</font></a><br></td></tr></tbody></table><br>
 
 </div>
