--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,18 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">コミュ障</font><br></td>
+             <td align="center" width="200">2024年3月19日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+祖母が精米機に指を詰めて以来、通院の手伝いとして週一で田舎へ帰っている。<br>
+精神がずぶといのか、祖母は探し物があれば探そうとせず真っ先に店員に聞くし、<br>
+院内で結構饒舌にしゃべりだすし、見知らぬ店員に怪我の話を語りだす。<br>
+今の自分の価値観からすると上記の行為は恥ずかしい行為だと思っている。<br>
+まあ、かくいう自分も昔はそんな感じだった気がする、今は現実でもネットでもｺﾐｭ障だけど…。<br>
+発言することの重さと、自分の伝えたいことを伝えるバランス。難しいなぁ。なんて思ったり(^^;<br>
+</td></tr></tbody></table><br><br><br>
+
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">JSRC MTGT Test Race</font><br></td>
              <td align="center" width="200">2024年3月10日<br></td></tr></tbody></table>
 <table border="1" width="999"><tbody><tr><td width="200" align="left">
