--- a/zakki2.html
+++ b/zakki2.html
@@ -8,6 +8,25 @@
 <body bgcolor="#000000" text="#ffffff" link="#00960c" vlink="#006208" alink="#006208" background="https://mizutisann.github.io/HP/img/bakg1.png">
 <div align="center">
 
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">ワイ○ピ 東京○リフト</font><br></td>
+             <td align="center" width="200">2024年3月27日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+過去に雑記でワイスピが嫌いと言っていたが、未視聴だったので試しに見てみた。<br>
+粗方予想した以上にヒドイものだった。<br>
+車も走法もヤクザ（笑）もナンバープレートまで滅茶苦茶、それっぽいのは東京の町並みだけだった。<br>
+車に疎い人からすれば派手で面白いのだろうが、こんな映画の為に破壊された車のことを思えば鬱になる。<br>
+見終えた後、あまりにも頭に来てしばらく放心状態になっていた。<br>
+車好きが見る（作る）映画では無いね。<br>
+</td></tr></tbody></table><br><br><br>
+
+<table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">My summer car</font><br></td>
+             <td align="center" width="200">2024年3月26日<br></td></tr></tbody></table>
+<table border="1" width="999"><tbody><tr><td width="200" align="left">
+最近My summer carという９５年夏のフィンランドで日銭を稼ぎながら、バラバラな車を組み立て維持するシミュレータ系のゲームにはまっている。<br>
+今は日本版マイサマwikiを片手に組み上げ、トラブルはあったが、何とか車検を取得した所。<br>
+FFならがも４気筒のキャブ車を細々と弄りながら乗っていく。こういうカーライフを送りたいなぁなんて(^^;<br>
+田舎道をノンストップで爆走するフィアットじじいが居るのはカンベンだけどね(^^;<br>
+</td></tr></tbody></table><br><br><br>
 
 <table border="1" width="809"><tbody><tr><td width="636" align="center"><font size="5">コミュ障</font><br></td>
              <td align="center" width="200">2024年3月19日<br></td></tr></tbody></table>
